--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+*.xlsx
+Lab_2_fine_tune_generative_ai_model.ipynb
